--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -78,6 +78,12 @@ paths:
       summary: Get transaction information
       description: Return information for the input specific transaction resource
       parameters:
+        - in: header
+          name: xUserId
+          schema:
+            type: string
+          required: false
+          description: ID of the user owner of the transaction
         - in: path
           name: transactionId
           schema:
@@ -108,6 +114,12 @@ paths:
         - transactions
       operationId: requestTransactionUserCancellation
       parameters:
+        - in: header
+          name: xUserId
+          schema:
+            type: string
+          required: false
+          description: ID of the user owner of the transaction
         - in: path
           name: transactionId
           schema:
@@ -144,6 +156,12 @@ paths:
       summary: Request authorization
       description: Request authorization for the transaction identified by payment token
       parameters:
+        - in: header
+          name: xUserId
+          schema:
+            type: string
+          required: false
+          description: ID of the user owner of the transaction
         - in: path
           name: transactionId
           schema:
