test(load): change NPG endpoint URI to mock for perf tests

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -154,7 +154,7 @@ microservice-chart:
     OTEL_METRICS_EXPORTER: otlp
     OTEL_LOGS_EXPORTER: none
     OTEL_TRACES_SAMPLER: "always_on"
-    NPG_URI: "https://stg-ta.nexigroup.com/api/phoenix-0.0"
+    NPG_URI: "https://api.dev.platform.pagopa.it/ecommerce/mock/npg/v1"
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
     NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX,BNLIITRR"
