use UUID for xUserId header param. fix tests and find by transactionId o userId

--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -79,11 +79,11 @@ paths:
       description: Return information for the input specific transaction resource
       parameters:
         - in: header
-          name: xUserId
-          schema:
-            type: string
+          name: x-user-id
           required: false
-          description: ID of the user owner of the transaction
+          description: User id (valued for authenticated payments) owner of the transaction
+          schema:
+            $ref: '#/components/schemas/UserId'
         - in: path
           name: transactionId
           schema:
@@ -115,11 +115,11 @@ paths:
       operationId: requestTransactionUserCancellation
       parameters:
         - in: header
-          name: xUserId
-          schema:
-            type: string
+          name: x-user-id
           required: false
-          description: ID of the user owner of the transaction
+          description: User id (valued for authenticated payments) owner of the transaction
+          schema:
+            $ref: '#/components/schemas/UserId'
         - in: path
           name: transactionId
           schema:
@@ -157,11 +157,11 @@ paths:
       description: Request authorization for the transaction identified by payment token
       parameters:
         - in: header
-          name: xUserId
-          schema:
-            type: string
+          name: x-user-id
           required: false
-          description: ID of the user owner of the transaction
+          description: User id (valued for authenticated payments) owner of the transaction
+          schema:
+            $ref: '#/components/schemas/UserId'
         - in: path
           name: transactionId
           schema:
@@ -1236,6 +1236,10 @@ components:
         - pspId
         - outcome
         - pspTransactionId
+    UserId:
+      description: unique user identifier
+      type: string
+      format: uuid
   requestBodies:
     NewTransactionRequest:
       required: true
