[CHK-2828] Check user in transactions operations (#489)
* add userId checking for transaction CRUD operations

* fix predefined query

* fix spotless

* fix query

* use UUID for xUserId header param. fix tests and find by transactionId o userId

* improve coverage

* remove customized query. check user id by code

* enforce userId checking for v1 findById document query

* Update src/main/java/it/pagopa/transactions/repositories/TransactionsViewRepository.java

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* Update src/main/java/it/pagopa/transactions/services/v1/TransactionsService.java

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* Update src/test/java/it/pagopa/transactions/services/v2/TransactionServiceTests.java

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

---------

Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MBP-di-Gianluca.homenet.telecomitalia.it>
Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -78,6 +78,12 @@ paths:
       summary: Get transaction information
       description: Return information for the input specific transaction resource
       parameters:
+        - in: header
+          name: x-user-id
+          required: false
+          description: User id (valued for authenticated payments) owner of the transaction
+          schema:
+            $ref: '#/components/schemas/UserId'
         - in: path
           name: transactionId
           schema:
@@ -108,6 +114,12 @@ paths:
         - transactions
       operationId: requestTransactionUserCancellation
       parameters:
+        - in: header
+          name: x-user-id
+          required: false
+          description: User id (valued for authenticated payments) owner of the transaction
+          schema:
+            $ref: '#/components/schemas/UserId'
         - in: path
           name: transactionId
           schema:
@@ -144,6 +156,12 @@ paths:
       summary: Request authorization
       description: Request authorization for the transaction identified by payment token
       parameters:
+        - in: header
+          name: x-user-id
+          required: false
+          description: User id (valued for authenticated payments) owner of the transaction
+          schema:
+            $ref: '#/components/schemas/UserId'
         - in: path
           name: transactionId
           schema:
@@ -1218,6 +1236,10 @@ components:
         - pspId
         - outcome
         - pspTransactionId
+    UserId:
+      description: unique user identifier
+      type: string
+      format: uuid
   requestBodies:
     NewTransactionRequest:
       required: true
