make authorizationUrl redirection as env variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,6 +80,8 @@ warmup.request.newTransaction.noticeCodePrefix=${WARMUP_REQUEST_NEW_TRANSACTION_
 
 
 checkout.basePath=${CHECKOUT_BASE_PATH}
+checkout.npg.gdi.url=${CHECKOUT_NPG_GDI_URL}
+checkout.outcome.url=${CHECKOUT_OUTCOME_URL}
 npg.uri=${NPG_URI}
 npg.readTimeout=${NPG_READ_TIMEOUT}
 npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
