--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -69,6 +69,8 @@ confidentialDataManager.personalDataVault.apiBasePath=http://personal-data-vault
 
 
 checkout.basePath=http://localhost/checkout
+checkout.npg.gdi.url=${CHECKOUT_NPG_GDI_URL}
+checkout.outcome.url=${CHECKOUT_OUTCOME_URL}
 npg.uri=http://localhost/npg
 npg.readTimeout=10000
 npg.connectionTimeout=10000
