--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -66,11 +66,9 @@ npg.notification.jwt.validity.time=120
 confidentialDataManager.personalDataVault.apiKey=personal-data-vault-api-key
 confidentialDataManager.personalDataVault.apiBasePath=http://personal-data-vault-test-host/v1/api
 
-
-
 checkout.basePath=http://localhost/checkout
-checkout.npg.gdi.url=${CHECKOUT_NPG_GDI_URL}
-checkout.outcome.url=${CHECKOUT_OUTCOME_URL}
+checkout.npg.gdi.url=http://localhost/checkout/gdi-check
+checkout.outcome.url=http://localhost/checkout/esito
 npg.uri=http://localhost/npg
 npg.readTimeout=10000
 npg.connectionTimeout=10000
