fix(NPG auth request): error codes to be excluded for retry

--- a/.env.example
+++ b/.env.example
@@ -85,6 +85,7 @@ NPG_BANCOMATPAY_PSP_LIST=BCITITMM
 NPG_BANCOMATPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-bancomatpay"}
 NPG_MYBANK_PSP_LIST=BCITITMM
 NPG_MYBANK_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-mybank"}
+NPG_AUTHORIZATION_EXCLUDED_ERROR_CODES=GW0035,GW0004
 TRANSACTION_DOCUMENT_TTL=600
 ECOMMERCE_EVENT_VERSION=V2
 
