--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -95,6 +95,7 @@ npg.authorization.bancomatpay.pspList=${NPG_BANCOMATPAY_PSP_LIST}
 npg.authorization.mybank.keys=${NPG_MYBANK_PSP_KEYS}
 npg.authorization.mybank.pspList=${NPG_MYBANK_PSP_LIST}
 npg.authorization.request.timeout.seconds=${NPG_AUTHORIZATION_REQUEST_TIMEOUT_SECONDS}
+npg.authorization.retry.excluded.error.codes=${NPG_AUTHORIZATION_EXCLUDED_ERROR_CODES}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
 
 ecommerce.send-payment-result-for-tx-expired.enabled=${SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED}
