--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -82,6 +82,7 @@ npg.authorization.bancomatpay.pspList=psp1,psp2
 npg.authorization.mybank.keys={"psp1":"mybank-key1","psp2":"mybank-key2"}
 npg.authorization.mybank.pspList=psp1,psp2
 npg.authorization.request.timeout.seconds=600
+npg.authorization.retry.excluded.error.codes=GW0004,GW0035
 ecommerce.event.version=V2
 transactionDocument.ttl=1000
 ecommerce.send-payment-result-for-tx-expired.enabled=false
