--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -172,6 +172,7 @@ microservice-chart:
     NODE_FORWARDER_CONNECTION_TIMEOUT: "19000"
     CHECKOUT_NPG_GDI_URL: "https://uat.checkout.pagopa.it/gdi-check"
     CHECKOUT_OUTCOME_URL: "https://uat.checkout.pagopa.it/esito"
+    NPG_AUTHORIZATION_EXCLUDED_ERROR_CODES: "GW0035,GW0004"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-access-key
