fix(auth-request): add 422 error response code

--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -202,6 +202,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
+        '422':
+          description: Transaction cannot be processed
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
         '500':
           description: Internal server error
           content:
