fix: add workaround for changing env in beta deployment

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -126,6 +126,15 @@ stages:
                     script: |
                       helm repo add microservice-chart https://pagopa.github.io/aks-microservice-chart-blueprint
                       helm dep build helm
+                - task: Kubernetes@1
+                  displayName: (workaround) Delete old beta deployment
+                  continueOnError: true
+                  inputs:
+                    kubernetesServiceEndpoint: $(DEV_KUBERNETES_SERVICE_CONN)
+                    kubernetesCluster: $(kubernetesCluster)
+                    namespace: ecommerce
+                    command: delete
+                    arguments: deployment beta-pagopaecommercetransactionsservice-microservice-chart
                 - template: azure-templates/helm-microservice-chart-deploy.yml
                   parameters:
                     DO_DEPLOY: true
