alert OPEX x apim V2

--- a/.github/workflows/create_dashboard copy.yaml
+++ b/.github/workflows/create_dashboard copy.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'api-spec/transactions-api.yaml'
+      - 'api-spec/index.yaml'
       - '.github/workflows/create_dashboard.yaml'
       - '.opex/**'
 
