--- a/.github/workflows/create_dashboard.yaml
+++ b/.github/workflows/create_dashboard.yaml
@@ -15,6 +15,7 @@ on:
 permissions:
   id-token: write
   contents: read
+  deployments: write
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -39,7 +40,7 @@ jobs:
           persist-credentials: false
 
       # from https://github.com/pagopa/opex-dashboard-azure-action/
-      - uses: pagopa/opex-dashboard-azure-action@ece3bc2b133be74cabb50aec14cdb9b8051b886f
+      - uses: pagopa/opex-dashboard-azure-action@v1.1.2
         with:
           environment: ${{ matrix.environment }}
           api-name: ${{ matrix.product }} # empty to have `.opex/env` directory structure
