--- a/.github/workflows/create_dashboard.yaml
+++ b/.github/workflows/create_dashboard.yaml
@@ -26,7 +26,8 @@ jobs:
     strategy:
       matrix:
         environment: [prod]
-        product: [apim_v1, apim_v2]
+        infra: [apim_v1, apim_v2]
+        product: [redirect, trx_v1, trx_v2]
       max-parallel: 1
     environment:
       name: ${{ matrix.environment }}
@@ -43,8 +44,8 @@ jobs:
       - uses: pagopa/opex-dashboard-azure-action@v1.1.2
         with:
           environment: ${{ matrix.environment }}
-          api-name: ${{ matrix.product }} # empty to have `.opex/env` directory structure
-          config: .opex/${{ matrix.product }}/env/${{ matrix.environment }}/config.yaml
+          api-name: ${{ matrix.infra }}/${{ matrix.product }} # empty to have `.opex/env` directory structure
+          config: .opex/${{ matrix.infra }}/${{ matrix.product }}/env/${{ matrix.environment }}/config.yaml
           client-id: ${{ secrets.CLIENT_ID }}
           tenant-id: ${{ secrets.TENANT_ID }}
           subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
