--- a/.opex/apim_v2/trx_v2/env/prod/config.yaml
+++ b/.opex/apim_v2/trx_v2/env/prod/config.yaml
@@ -1,8 +1,9 @@
-oa3_spec: ./api-spec/transactions-api.yaml # If start with http the file would be downloaded from the internet
-name: opex_pagopa-ecommerce-transactions-service
+oa3_spec: ./api-spec/v2/transactions-api.yaml # If start with http the file would be downloaded from the internet
+name: opex_pagopa-ecommerce-transactions-v2-service-apimv2
 location: West Europe
 timespan: 5m # Default, a number or a timespan https://docs.microsoft.com/en-us/azure/data-explorer/kusto/query/scalar-data-types/timespan
-data_source: /subscriptions/b9fc9419-6097-45fe-9f74-ba0641c91912/resourceGroups/pagopa-p-api-rg/providers/Microsoft.ApiManagement/service/pagopa-p-apim
+# data_source: /subscriptions/b9fc9419-6097-45fe-9f74-ba0641c91912/resourceGroups/pagopa-p-api-rg/providers/Microsoft.ApiManagement/service/pagopa-p-apim
+data_source: /subscriptions/b9fc9419-6097-45fe-9f74-ba0641c91912/resourceGroups/pagopa-p-api-rg/providers/Microsoft.ApiManagement/service/pagopa-p-weu-core-apim-v2
 resource_type: api-management
 action_groups:
   - /subscriptions/b9fc9419-6097-45fe-9f74-ba0641c91912/resourceGroups/pagopa-p-monitor-rg/providers/microsoft.insights/actionGroups/PagoPA
