--- a/pom.xml
+++ b/pom.xml
@@ -319,22 +319,22 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>transaction-api-v3</id>
+                        <id>transaction-api-v2.1</id>
                         <goals>
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/api-spec/v3/transactions-api.yaml</inputSpec>
+                            <inputSpec>${project.basedir}/api-spec/v2.1/transactions-api.yaml</inputSpec>
                             <generatorName>spring</generatorName>
                             <library>spring-boot</library>
                             <modelNameSuffix>Dto</modelNameSuffix>
                             <generateApiTests>false</generateApiTests>
                             <generateModelTests>false</generateModelTests>
                             <configOptions>
-                                <basePackage>it.pagopa.generated.transactions.v3.server</basePackage>
-                                <modelPackage>it.pagopa.generated.transactions.v3.server.model</modelPackage>
-                                <apiPackage>it.pagopa.generated.transactions.v3.server.api</apiPackage>
-                                <configPackage>it.pagopa.generated.transactions.v3.server.config</configPackage>
+                                <basePackage>it.pagopa.generated.transactions.v2_1.server</basePackage>
+                                <modelPackage>it.pagopa.generated.transactions.v2_1.server.model</modelPackage>
+                                <apiPackage>it.pagopa.generated.transactions.v2_1.server.api</apiPackage>
+                                <configPackage>it.pagopa.generated.transactions.v2_1.server.config</configPackage>
                                 <interfaceOnly>true</interfaceOnly>
                                 <hideGenerationTimestamp>true</hideGenerationTimestamp>
                                 <skipDefaultInterface>true</skipDefaultInterface>
