--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <java.version>17</java.version>
         <spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
         <jacoco.version>0.8.8</jacoco.version>
-        <pagopa-ecommerce-commons.version>1.19.1</pagopa-ecommerce-commons.version>
+        <pagopa-ecommerce-commons.version>1.19.3</pagopa-ecommerce-commons.version>
         <spotless.version>2.28.0</spotless.version>
         <ecs-logging-version>1.5.0</ecs-logging-version>
         <mock-web-server.version>4.11.0</mock-web-server.version>
@@ -310,6 +310,31 @@
                                 <modelPackage>it.pagopa.generated.transactions.v2.server.model</modelPackage>
                                 <apiPackage>it.pagopa.generated.transactions.v2.server.api</apiPackage>
                                 <configPackage>it.pagopa.generated.transactions.v2.server.config</configPackage>
+                                <interfaceOnly>true</interfaceOnly>
+                                <hideGenerationTimestamp>true</hideGenerationTimestamp>
+                                <skipDefaultInterface>true</skipDefaultInterface>
+                                <useSwaggerUI>false</useSwaggerUI>
+                                <reactive>true</reactive>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>transaction-api-v2.1</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${project.basedir}/api-spec/v2.1/transactions-api.yaml</inputSpec>
+                            <generatorName>spring</generatorName>
+                            <library>spring-boot</library>
+                            <modelNameSuffix>Dto</modelNameSuffix>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <configOptions>
+                                <basePackage>it.pagopa.generated.transactions.v2_1.server</basePackage>
+                                <modelPackage>it.pagopa.generated.transactions.v2_1.server.model</modelPackage>
+                                <apiPackage>it.pagopa.generated.transactions.v2_1.server.api</apiPackage>
+                                <configPackage>it.pagopa.generated.transactions.v2_1.server.config</configPackage>
                                 <interfaceOnly>true</interfaceOnly>
                                 <hideGenerationTimestamp>true</hideGenerationTimestamp>
                                 <skipDefaultInterface>true</skipDefaultInterface>
