feat(npg-apm): add configuration for apple pay and satispay

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -81,6 +81,10 @@ npg.authorization.bancomatpay.keys={"psp1":"bancomatpay-key1","psp2":"bancomatpa
 npg.authorization.bancomatpay.pspList=psp1,psp2
 npg.authorization.mybank.keys={"psp1":"mybank-key1","psp2":"mybank-key2"}
 npg.authorization.mybank.pspList=psp1,psp2
+npg.authorization.satispay.keys={"psp1":"satispay-key1","psp2":"satispay-key2"}
+npg.authorization.satispay.pspList=psp1,psp2
+npg.authorization.applepay.keys={"psp1":"applepay-key1","psp2":"applepay-key2"}
+npg.authorization.applepay.pspList=psp1,psp2
 npg.authorization.request.timeout.seconds=600
 npg.authorization.retry.excluded.error.codes=GW0004,GW0035
 ecommerce.event.version=V2
