--- a/pom.xml
+++ b/pom.xml
@@ -557,6 +557,8 @@
                     <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
                     <scmVersionType>tag</scmVersionType>
                     <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+                    <scmVersionType>branch</scmVersionType>
+                    <scmVersion>CHK-3021-add-satispay-npg-method</scmVersion>
                     <goals>install -DskipTests</goals>
                 </configuration>
                 <executions>
