--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -73,18 +73,18 @@ npg.uri=http://localhost/npg
 npg.readTimeout=10000
 npg.connectionTimeout=10000
 npg.client.apiKey=npg_key
-npg.authorization.cards.keys={"psp1":"cards-key1","psp2":"cards-key2"}
-npg.authorization.cards.pspList=psp1,psp2
-npg.authorization.paypal.keys={"psp1":"paypal-key1","psp2":"paypal-key2"}
-npg.authorization.paypal.pspList=psp1,psp2
-npg.authorization.bancomatpay.keys={"psp1":"bancomatpay-key1","psp2":"bancomatpay-key2"}
-npg.authorization.bancomatpay.pspList=psp1,psp2
-npg.authorization.mybank.keys={"psp1":"mybank-key1","psp2":"mybank-key2"}
-npg.authorization.mybank.pspList=psp1,psp2
-npg.authorization.satispay.keys={"psp1":"satispay-key1","psp2":"satispay-key2"}
-npg.authorization.satispay.pspList=psp1,psp2
-npg.authorization.applepay.keys={"psp1":"applepay-key1","psp2":"applepay-key2"}
-npg.authorization.applepay.pspList=psp1,psp2
+npg.authorization.cards.keys={"psp1-cards":"cards-key1","psp2-cards":"cards-key2"}
+npg.authorization.cards.pspList=psp1-cards,psp2-cards
+npg.authorization.paypal.keys={"psp1-paypal":"paypal-key1","psp2-paypal":"paypal-key2"}
+npg.authorization.paypal.pspList=psp1-paypal,psp2-paypal
+npg.authorization.bancomatpay.keys={"psp1-bancomatpay":"bancomatpay-key1","psp2-bancomatpay":"bancomatpay-key2"}
+npg.authorization.bancomatpay.pspList=psp1-bancomatpay,psp2-bancomatpay
+npg.authorization.mybank.keys={"psp1-mybank":"mybank-key1","psp2-mybank":"mybank-key2"}
+npg.authorization.mybank.pspList=psp1-mybank,psp2-mybank
+npg.authorization.satispay.keys={"psp1-satispay":"satispay-key1","psp2-satispay":"satispay-key2"}
+npg.authorization.satispay.pspList=psp1-satispay,psp2-satispay
+npg.authorization.applepay.keys={"psp1-applepay":"applepay-key1","psp2-applepay":"applepay-key2"}
+npg.authorization.applepay.pspList=psp1-applepay,psp2-applepay
 npg.authorization.request.timeout.seconds=600
 npg.authorization.retry.excluded.error.codes=GW0004,GW0035
 ecommerce.event.version=V2
