--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -188,6 +188,7 @@ microservice-chart:
     ECOMMERCE_STORAGE_TRANSIENT_CONNECTION_STRING: ecommerce-storage-transient-connection-string
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
     JWT_ECOMMERCE_SECRET: sessions-jwt-secret
+    JWT_ECOMMERCE_WEBVIEW_SECRET: ecommerce-webview-jwt-signing-key
     PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
     ECOMMERCE_PAYMENT_METHODS_APY_KEY: payment-method-api-key
     WALLET_API_KEY: wallet-api-key
