--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -157,7 +157,7 @@ microservice-chart:
     NPG_CONNECTION_TIMEOUT: "10000"
     NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX,PASCITMM,WOLLNLB1,BPMOIT22,SARDIT31"
     NPG_PAYPAL_PSP_LIST: ""
-    NPG_MYBANK_PSP_LIST: ""
+    NPG_MYBANK_PSP_LIST: "UNCRITMM"
     NPG_BANCOMATPAY_PSP_LIST: ""
     NPG_AUTHORIZATION_REQUEST_TIMEOUT_SECONDS: "180"
     TRANSACTION_DOCUMENT_TTL: "600"
