feat(npg-apm): add configuration for apple pay and satispay (#538)
* feat(npg-apm): add configuration for apple pay and satispay

* fix: update commons version

* trigger CR pipeline

* chore: differentiate test api keys

* fix: update helm values UAT

* trigger CR pipeline

* trigger CR pipeline

* fix: junit tests

* fix: rename NPG SATISPAY to SATYSPAY_DIRECT

* fix: spotless

* fix: satispay payment method name

* use value of in place of fromServiceName to identify payment method name, for satispay_redirect introduction

* set commons version to 1.21.0

---------

Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MacBook-Pro-di-Gianluca.local>
Co-authored-by: ciuffagianluca <113357981+ciuffagianluca@users.noreply.github.com>
Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MBP-di-Gianluca.homenet.telecomitalia.it>

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -163,6 +163,8 @@ microservice-chart:
     NPG_PAYPAL_PSP_LIST: "BCITITMM,SIGPITM1XXX"
     NPG_MYBANK_PSP_LIST: "BCITITMM,UNCRITMM"
     NPG_BANCOMATPAY_PSP_LIST: "BCITITMM"
+    NPG_SATISPAY_PSP_LIST: "SATYLUL1"
+    NPG_APPLEPAY_PSP_LIST: "SIGPITM1XXX"
     NPG_AUTHORIZATION_REQUEST_TIMEOUT_SECONDS: "60"
     TRANSACTION_DOCUMENT_TTL: "600"
     CHECKOUT_BASE_PATH: "https://dev.checkout.pagopa.it"
@@ -202,6 +204,8 @@ microservice-chart:
     NPG_BANCOMATPAY_PSP_KEYS: npg-bancomatpay-psp-keys
     NPG_MYBANK_PSP_KEYS: npg-mybank-psp-keys
     WALLET_STORAGE_CONNECTION_STRING: wallet-storage-connection-string
+    NPG_SATISPAY_PSP_KEYS: npg-satispay-psp-keys
+    NPG_APPLEPAY_PSP_KEYS: npg-apple-pay-psp-keys
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
