--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -158,6 +158,8 @@ microservice-chart:
     NPG_PAYPAL_PSP_LIST: ""
     NPG_MYBANK_PSP_LIST: ""
     NPG_BANCOMATPAY_PSP_LIST: ""
+    NPG_SATISPAY_PSP_LIST: ""
+    NPG_APPLEPAY_PSP_LIST: ""
     NPG_AUTHORIZATION_REQUEST_TIMEOUT_SECONDS: "180"
     TRANSACTION_DOCUMENT_TTL: "600"
     CHECKOUT_BASE_PATH: "https://checkout.pagopa.it"
@@ -200,6 +202,8 @@ microservice-chart:
     NPG_BANCOMATPAY_PSP_KEYS: npg-bancomatpay-psp-keys
     NPG_MYBANK_PSP_KEYS: npg-mybank-psp-keys
     WALLET_STORAGE_CONNECTION_STRING: wallet-storage-connection-string
+    NPG_SATISPAY_PSP_KEYS: npg-satispay-psp-keys
+    NPG_APPLEPAY_PSP_KEYS: npg-apple-pay-psp-keys
   keyvault:
     name: "pagopa-p-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
