--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -95,6 +95,10 @@ npg.authorization.bancomatpay.keys=${NPG_BANCOMATPAY_PSP_KEYS}
 npg.authorization.bancomatpay.pspList=${NPG_BANCOMATPAY_PSP_LIST}
 npg.authorization.mybank.keys=${NPG_MYBANK_PSP_KEYS}
 npg.authorization.mybank.pspList=${NPG_MYBANK_PSP_LIST}
+npg.authorization.satispay.keys=${NPG_SATISPAY_PSP_KEYS}
+npg.authorization.satispay.pspList=${NPG_SATISPAY_PSP_LIST}
+npg.authorization.applepay.keys=${NPG_APPLEPAY_PSP_KEYS}
+npg.authorization.applepay.pspList=${NPG_APPLEPAY_PSP_LIST}
 npg.authorization.request.timeout.seconds=${NPG_AUTHORIZATION_REQUEST_TIMEOUT_SECONDS}
 npg.authorization.retry.excluded.error.codes=${NPG_AUTHORIZATION_EXCLUDED_ERROR_CODES}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
