--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -121,3 +121,5 @@ node.forwarder.connectionTimeout=${NODE_FORWARDER_CONNECTION_TIMEOUT}
 
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=30s
+
+exclusiveLockDocument.ttlSeconds=${EXCLUSIVE_LOCK_DOCUMENT_TTL_SECONDS:2}
