--- a/api-spec/v2/transactions-api.yaml
+++ b/api-spec/v2/transactions-api.yaml
@@ -132,6 +132,9 @@ components:
         isAllCCP:
           type: boolean
           description: Flag for poste psp enabling in gec request
+        creditorReferenceId:
+          type: string
+          description: Creditor notice number's
       required:
         - rptId
         - amount
