--- a/api-spec/v2.1/transactions-api.yaml
+++ b/api-spec/v2.1/transactions-api.yaml
@@ -278,7 +278,7 @@ components:
         - IO
         - CHECKOUT
         - CHECKOUT_CART
-        - WISP
+        - WISP_REDIRECT
     UserId:
       description: unique user identifier
       type: string
