--- a/api-spec/v1/transactions-api.yaml
+++ b/api-spec/v1/transactions-api.yaml
@@ -172,7 +172,7 @@ paths:
           name: x-pgs-id
           schema:
             type: string
-            pattern: 'XPAY|VPOS|NPG|REDIRECT'
+            pattern: 'NPG|REDIRECT'
           required: false
           description: Pgs identifier (populated by APIM policy)
       requestBody:
@@ -624,15 +624,11 @@ components:
         outcomeGateway:
           type: object
           oneOf:
-            - $ref: '#/components/schemas/OutcomeVposGateway'
-            - $ref: '#/components/schemas/OutcomeXpayGateway'
             - $ref: '#/components/schemas/OutcomeNpgGateway'
             - $ref: '#/components/schemas/OutcomeRedirectGateway'
           discriminator:
             propertyName: paymentGatewayType
             mapping:
-              XPAY: "#/components/schemas/OutcomeXpayGateway"
-              VPOS: "#/components/schemas/OutcomeVposGateway"
               NPG: '#/components/schemas/OutcomeNpgGateway'
               REDIRECT: '#/components/schemas/OutcomeRedirectGateway'
         timestampOperation:
@@ -718,7 +714,7 @@ components:
               $ref: "#/components/schemas/AmountEuroCents"
             gateway:
               type: string
-              example: 'XPAY'
+              example: 'NPG'
             sendPaymentResultOutcome:
               type: string
               enum:
@@ -1075,102 +1071,6 @@ components:
         - PPT_STAZIONE_INT_PA_IRRAGGIUNGIBILE
         - PPT_STAZIONE_INT_PA_SERVIZIO_NONATTIVO
         - GENERIC_ERROR
-    OutcomeVposGateway:
-      type: object
-      properties:
-        paymentGatewayType:
-          type: string
-          example: 'VPOS'
-        outcome:
-          type: string
-          enum:
-            - OK
-            - KO
-        rrn:
-          type: string
-        authorizationCode:
-          type: string
-        errorCode:
-          type: string
-          description: error code received from Vpos - https://github.com/pagopa/pagopa-wisp2.0-pp-server/blob/ff0e8e3354fc11d296fe5547b9b00941ead64e96/pp-server/pp-dto/src/main/java/com/pagopa/utils/VposResultCodeEnum.java
-          enum:
-            - '00'
-            - '01'
-            - '02'
-            - '03'
-            - '04'
-            - '05'
-            - '06'
-            - '07'
-            - '08'
-            - '09'
-            - '10'
-            - '11'
-            - '12'
-            - '13'
-            - '16'
-            - '17'
-            - '20'
-            - '21'
-            - '25'
-            - '26'
-            - '35'
-            - '37'
-            - '38'
-            - '40'
-            - '41'
-            - '50'
-            - '51'
-            - '98'
-            - '99'
-      required:
-        - paymentGatewayType
-        - outcome
-    OutcomeXpayGateway:
-      type: object
-      properties:
-        paymentGatewayType:
-          type: string
-          example: 'XPAY'
-        outcome:
-          type: string
-          enum:
-            - OK
-            - KO
-        authorizationCode:
-          type: string
-        errorCode:
-          type: number
-          description: error code received from XPay - https://ecommerce.nexi.it/specifiche-tecniche/tabelleecodifiche/codicierroreapirestful.html
-          enum:
-            - 1
-            - 2
-            - 3
-            - 4
-            - 5
-            - 7
-            - 8
-            - 9
-            - 12
-            - 13
-            - 14
-            - 15
-            - 16
-            - 17
-            - 18
-            - 19
-            - 20
-            - 21
-            - 22
-            - 50
-            - 96
-            - 97
-            - 98
-            - 99
-            - 100
-      required:
-        - paymentGatewayType
-        - outcome
     OutcomeNpgGateway:
       type: object
       properties:
