--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,6 +51,7 @@ spring.data.mongodb.database=ecommerce
 management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
 management.health.circuitbreakers.enabled=true
+management.metrics.export.defaults.enabled=true
 
 azurestorage.connectionstringtransient=${ECOMMERCE_STORAGE_TRANSIENT_CONNECTION_STRING}
 azurestorage.queues.transactionexpiration.name=${TRANSACTION_EXPIRATION_QUEUE_NAME}
