--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 management.metrics.enable:
     all: false
-    application: false # reports startup time, useful for future comparison
+    application: true # reports startup time, useful for future comparison
     http.server.requests: true # reports http request counts
     resilience4j.circuitbreaker: true # reports circuit breaker status
     jvm.memory: true # reports heap status
