feat(redirect): parameterize methods descriptions

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -100,5 +100,6 @@ node.forwarder.apiKey=node-forwarder-api-key
 node.forwarder.url=http://localhost/checkout-redirect/forwarder
 redirect.paymentTypeCodeList=CHECKOUT-psp1-RBPR,psp2-RBPB,RBPS
 redirect.pspUrlMapping={"CHECKOUT-psp1-RBPR":'http://localhost:8096/redirections1',"psp2-RBPB":'http://localhost:8096/redirections2', "RBPS": 'http://localhost:8096/redirections3'}
+redirect.paymentTypeCodeDescriptionMapping={"RBPR":"Poste addebito in conto Retail","RBPB":"Poste addebito in conto Business","RBPP":"Paga con BottonePostePay","RPIC":"Pago in Conto Intesa","RBPS":"SCRIGNO Internet Banking","RICO":"Conto ICONTO"}
 node.forwarder.readTimeout=10000
 node.forwarder.connectionTimeout=10000
