--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -113,6 +113,7 @@ transactionDocument.ttl=${TRANSACTION_DOCUMENT_TTL}
 
 redirect.paymentTypeCodeList=${REDIRECT_PAYMENT_TYPE_CODE_LIST}
 redirect.pspUrlMapping=${REDIRECT_URL_MAPPING}
+redirect.paymentTypeCodeDescriptionMapping=${REDIRECT_PAYMENT_TYPE_CODE_DESCRIPTION_MAPPING}
 
 node.forwarder.apiKey=${NODE_FORWARDER_API_KEY}
 node.forwarder.url=${NODE_FORWARDER_URL}
