--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -32,6 +32,7 @@ microservice-chart:
     tag: "1.36.2"
     pullPolicy: Always
   livenessProbe:
+    handlerType: httpGet
     httpGet:
       path: /actuator/health/liveness
       port: 8080
@@ -39,6 +40,7 @@ microservice-chart:
     failureThreshold: 6
     periodSeconds: 10
   readinessProbe:
+    handlerType: httpGet
     httpGet:
       path: /actuator/health/readiness
       port: 8080
