--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -33,6 +33,7 @@ microservice-chart:
     tag: "1.36.2" #improve
     pullPolicy: Always
   livenessProbe:
+    handlerType: httpGet
     httpGet:
       path: /actuator/health/liveness
       port: 8080
@@ -40,6 +41,7 @@ microservice-chart:
     failureThreshold: 6
     periodSeconds: 10
   readinessProbe:
+    handlerType: httpGet
     httpGet:
       path: /actuator/health/readiness
       port: 8080
